--- a/model_part1.Rmd
+++ b/model_part1.Rmd
@@ -59,6 +59,15 @@ y_train = trainData$diagnosis
 
 x_test = model.matrix(diagnosis ~., testData)[, -1]
 y_test = testData$diagnosis
+
+train_data = trainData %>% 
+   mutate(diagnosis = 
+           as.numeric(as.factor(recode(diagnosis, `M` = 1, `B` = 0))) - 1)
+test_data = testData %>% 
+   mutate(diagnosis = 
+           as.numeric(as.factor(recode(diagnosis, `M` = 1, `B` = 0))) - 1)
+train_y = train_data$diagnosis
+test_y = test_data$diagnosis
 ```
 
 
@@ -66,7 +75,7 @@ y_test = testData$diagnosis
 #predictor correlations
 corrplot(cor(bc_df[,-1]),
          method = "circle",
-         type = "full",
+         type = "upper",
          tl.cex = 0.5,
          order = "hclust")
 ```
@@ -89,8 +98,12 @@ summary(glm_model)
 
 ```{r}
 set.seed(123)
+train_data = trainData %>% 
+   mutate(diagnosis = 
+           as.numeric(as.factor(recode(diagnosis, `M` = 1, `B` = 0))) - 1)
+
 glm_fit = glm(diagnosis ~ .,
-              data = trainData,
+              data = train_data,
               family = binomial(link = "logit"))
 summary(glm_fit)
 vip(glm_fit)
@@ -99,7 +112,7 @@ glm.pred.prob = predict(glm_fit,
 glm.pred = rep("0", length(glm.pred.prob))
 glm.pred[glm.pred.prob > 0.5] = "1"
 confusionMatrix(data = factor(glm.pred, levels = c("1", "0")),
-                reference = factor(trainData$diagnosis),
+                reference = factor(train_data$diagnosis),
                 positive = "1")
 glm.pred.prob.test = predict(glm_fit, type = "response", newdata = testData)
 roc.glm.test = roc(testData$diagnosis, glm.pred.prob.test)
@@ -116,7 +129,7 @@ ctrl1 <- trainControl(method = "repeatedcv",
                       repeats = 5,
                       number = 10)
 mars_fit <- train(x = x_train, 
-                  y = y_train,
+                  y = train_y,
                  method = "earth",
                  tuneGrid = mars_grid,
                  trControl = ctrl1)
@@ -134,7 +147,7 @@ mars_train_se
 #Testing RMSE 
 mars_test_predict = predict(mars_fit,
                         newdata = x_test)
-mars_test_se = RMSE(mars_test_predict, testData$diagnosis)
+mars_test_se = RMSE(mars_test_predict, test_data$diagnosis)
 mars_test_se
 ```
 
@@ -146,10 +159,13 @@ ctrl1 <- trainControl(method = "repeatedcv",
                       repeats = 5,
                       number = 10)
 knn_fit <- train(diagnosis ~., 
-                data = trainData, 
+                data = train_data, 
                 method = "knn",
-                scale = TRUE,
+                preProcess = c("center", "scale"), 
+                tuneGrid = data.frame(k = seq(1,50,by=1)),
                 trControl = ctrl1)
+knn_fit$bestTune
+ggplot(knn_fit,xTrans = function(x)log(x), highlight = TRUE)
 
 #Training RMSE 
 knn_train_se = mean(knn_fit$resample$RMSE) 
@@ -157,8 +173,8 @@ knn_train_se
 
 #Testing RMSE 
 knn_test_predict = predict(knn_fit,
-                        newdata = testData)
-knn_test_se = RMSE(knn_test_predict, testData$diagnosis)
+                        newdata = test_data)
+knn_test_se = RMSE(knn_test_predict, test_data$diagnosis)
 knn_test_se
 ```
 
